Closed
Bug 527139
Opened 16 years ago
Closed 16 years ago
lirasm: ARM has no integer-divide instruction, but we emit LIR_div
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: graydon, Assigned: graydon)
Details
(Whiteboard: fixed-in-nanojit)
Attachments
(1 file)
|
1.69 KB,
patch
|
rreitmai
:
review+
|
Details | Diff | Splinter Review |
Tracemonkey is good enough to limit itself to using integer div and mod only on intel platforms. Tamarin doesn't use them at all. Lirasm is a bit too aggressive about using them, and hence crashes ARM (and probably PPC and Sparc).
Attachment #410889 -
Flags: review?(rreitmai)
Updated•16 years ago
|
Attachment #410889 -
Flags: review?(rreitmai) → review+
| Assignee | ||
Comment 1•16 years ago
|
||
Whiteboard: fixed-in-nanojit
Comment 2•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•