Bug 527139 - Fix lirasm's use of integer-divide on non-intel platforms, r=rreitmai.